update I18n file, strip input data, rspec tests

--- a/contenftul_fields_types.yml
+++ b/contenftul_fields_types.yml
@@ -9,6 +9,7 @@ en:
       json_field: Object
       radio: Boolean
       array_field: Array
+      text_area: Text
       IntegerField:
         text_field: Integer
       FloatField:
