updated contentful field types

--- a/contenftul_fields_types.yml
+++ b/contenftul_fields_types.yml
@@ -8,6 +8,7 @@ en:
       file: Asset
       json_field: Object
       radio: Boolean
+      checkbox: Boolean
       array_field: Array
       text_area: Text
       IntegerField:
