adding markdown editor as text type

--- a/contenftul_fields_types.yml
+++ b/contenftul_fields_types.yml
@@ -11,6 +11,7 @@ en:
       checkbox: Boolean
       array_field: Array
       text_area: Text
+      markdown_editor: Text
       IntegerField:
         text_field: Integer
       FloatField:
