Change support for check_boxes field type to Array of Symbols

--- a/contenftul_fields_types.yml
+++ b/contenftul_fields_types.yml
@@ -9,7 +9,7 @@ en:
       json_field: Object
       radio: Boolean
       checkbox: Boolean
-      check_boxes: Boolean
+      check_boxes: Array
       array_field: Array
       text_area: Text
       html_editor: Text
